# multithreaded-image-tool

./: CMakeLists.txt  README.md
include/: ImageProcessor.h
src/: ImageProcessor.cpp  main.cpp
